compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_trait_projection_normalizes_during_expr_typeck.kn
// class: const-generic-projection
// source: expression type checking must normalize associated projections that carry const trait arguments
// exit: 0

trait HasOut[N: usize] {
    type Out;
};

struct X {};

impl X: HasOut[1] {
    type Out = i32;
}

fn take(value: X.HasOut[1].Out) i32 {
    return value;
}

fn main() i32 {
    return take(7) - 7;
}
