compiler/kernc_cli/tests/soundness/reject/projection/non_contractive_projection_growth_through_wrapper_rejected.kn
// class: projection-cycle
// source: re-entering the same impl-associated type through an ordinary wrapper must still be rejected as non-contractive
// stderr: recursive associated type projection cycle detected
// stderr: projection repeatedly re-enters the same impl-associated type

trait Loop {
    type Out;
};

struct Wrap[T] {
    inner: T,
};

struct X {};

impl X: Loop {
    type Out = Wrap[X.Loop.Out];
}

fn main() i32 {
    _ = @sizeOf[X.Loop.Out]();
    return 0;
}
